# bird.io

./: Cargo.toml
prototype_tests/: yin.py
src/: encoding.rs  errors.rs  freq_estimation.rs  frequency_modulation.rs  input.rs  instrumentation.rs  lib.rs  output.rs  strategy.rs  traits.rs
tests/: sanity_checks.rs
