[package]
name = "birdio"
version = "0.1.0"
authors = ["saresend <saresend@usc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { git = "https://github.com/RustAudio/cpal" }
async-trait = "0.1.31"
tokio = { version="0.2.21", features = ["macros", "rt-threaded"] }
plotters = "0.2.14"
lazy_static = "1.4.0"
dasp = { version="0.11.0", features = ["signal"] }
dft = "0.5.5"
rustfft = "3.0.1"
